--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   google_fonts: ^6.2.1
   flutter_smart_dialog: ^4.9.8
   intl: ^0.19.0
+  flutter_datetime_picker_plus: ^2.2.0
 
 
 
